# code_notes

./: CMakeLists.txt  readme.md
config/: config.json  param.yml  serial.txt
include/: AddServer.h  Client.h  Drawer.h  Param.h  config.h  ser.h  templateapp.h
lib/: Drawer.cpp
src/: main.cpp
